--- a/src/HomeStack.Cli/HomeStack.Cli.csproj
+++ b/src/HomeStack.Cli/HomeStack.Cli.csproj
@@ -1,26 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>homestack</AssemblyName>
-    <PackAsTool>true</PackAsTool>
-    <ToolCommandName>homestack</ToolCommandName>
-    <PackageOutputPath>./nupkg</PackageOutputPath>
+    <Version>0.1.0</Version>
+    <Authors>C0deGeek</Authors>
+    <Product>HomeStack</Product>
+    <Description>Homelab service management tool</Description>
+    <Copyright>Copyright (c) 2025 C0deGeek (David)</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/c0degeek/homestack</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HomeStack.Core\HomeStack.Core.csproj" />
     <ProjectReference Include="..\HomeStack.Scanner\HomeStack.Scanner.csproj" />
     <ProjectReference Include="..\HomeStack.Configurator\HomeStack.Configurator.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
-    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
-    <PackageReference Include="Spectre.Console" Version="0.48.0" />
   </ItemGroup>
 
 </Project>
