--- a/src/HomeStack.Scanner/HomeStack.Scanner.csproj
+++ b/src/HomeStack.Scanner/HomeStack.Scanner.csproj
@@ -1,18 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HomeStack.Core\HomeStack.Core.csproj" />
+    <PackageReference Include="Docker.DotNet" Version="3.125.15" />
+    <PackageReference Include="SSH.NET" Version="2025.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Docker.DotNet" Version="3.125.15" />
-    <PackageReference Include="SSH.NET" Version="2023.0.0" />
+    <ProjectReference Include="..\HomeStack.Core\HomeStack.Core.csproj" />
+    <ProjectReference Include="..\HomeStack.Configurator\HomeStack.Configurator.csproj" />
   </ItemGroup>
 
 </Project>
